crates/forge_services/src/snapshots/forge_services__tool_service__test__failed_tool_call.snap
---
source: crates/forge_services/src/tool_service.rs
expression: result
---
<forge_tool_result><forge_tool_name>failure_tool</forge_tool_name><error><![CDATA[---
type: Generic
content: |2

  ERROR:
  Caused by: Tool call failed with simulated failure
---

ERROR:
Caused by: Tool call failed with simulated failure
]]></error></forge_tool_result>
