crates/forge_services/src/snapshots/forge_services__tool_service__test__successful_tool_call.snap
---
source: crates/forge_services/src/tool_service.rs
expression: result
---
<forge_tool_result><forge_tool_name>success_tool</forge_tool_name><success><![CDATA[---
type: Generic
content: 'Success with input: "test input"'
---
Success with input: "test input"]]></success></forge_tool_result>
