crates/forge_services/src/snapshots/forge_services__tool_service__test__tool_not_found.snap
---
source: crates/forge_services/src/tool_service.rs
expression: result
---
<forge_tool_result><forge_tool_name>nonexistent_tool</forge_tool_name><error><![CDATA[---
type: Generic
content: |2

  ERROR:
  Caused by: No tool with name 'nonexistent_tool' was found. Please try again with one of these tools failure_tool, success_tool
---

ERROR:
Caused by: No tool with name 'nonexistent_tool' was found. Please try again with one of these tools failure_tool, success_tool
]]></error></forge_tool_result>
